@@ -1,5 +1,11 @@
 2006-07-10  Roger Leigh  <rleigh@debian.org>
 
+	* schroot/schroot-main-base.cc (run_impl): Remove code duplicated
+	in schroot_base::main::run (termios saving and restoring, and
+	exception handling).
+
+2006-07-10  Roger Leigh  <rleigh@debian.org>
+
 	* debian/schroot.docs: Add the contents of debian/docs.
 
 	* debian/docs: Remove.
